Makeing a note here: after learning about monospace quirk I found the block alignment break whether it was generic or named. It was tested to be fixed on block_3 by changing the width from 44.22em to 44em. This means it has somthing to do with the differnce between proportional and monospace. I reverted it back and am making a snap shot before I go fixing and tinkering.

--- a/css/caterpillarStyles.css
+++ b/css/caterpillarStyles.css
@@ -15,7 +15,7 @@ body {
 }
 /* LAYOUT Settings */
 /* This is were most of the font stack should sit.
-	Then it gets henherited in the document.*/
+	Then it gets inherited in the document.*/
 
 #wrapper {
     width: 100%;
@@ -23,7 +23,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     display: block;
-    font-family: serif;
+    font-family: monospace, monospace;
     color: #000000;
     /*sets global font color*/
     
